virtual hospital API-section
